test/corpus/ip.txt
==================
IP isInRange()
==================

permit (
  principal,
  action == Action::"view",
  resource == Photo::"VacationPhoto94.jpg"
)
when { context.source_ip.isInRange(ip("222.222.222.0/24")) };

---

(source_file
  (policy
    (effect
      (permit))
    (scope
      (principal_constraint
        (all_principals))
      (action_constraint
        (action_eq_constraint
          (entity
            (path
              (identifier))
            (str))))
      (resource_constraint
        (resource_eq_constraint
          (entity
            (path
              (identifier))
            (str)))))
    (condition
      (when)
      (call_expression
        (selector_expression
          (selector_expression
            (context)
            (field_identifier))
          (field_identifier))
        (argument_list
          (ext_fun_call
            (path
              (identifier))
            (expression_list
              (str))))))))
